# trader-ops

./: .env.development  .env.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PHASE_0_COMPLETION_SUMMARY.md  README.md  READY_FOR_TESTING.md  docker-compose.dev.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  test-logging.txt  test_dashboard_automation.js
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: CODEOWNERS  README.md  branch-protection-config.yml  labeler.yml  project-templates.md  pull_request_template.md  repository-settings.yml
.github/DISCUSSION_TEMPLATE/: feature_planning.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  performance_issue.yml  security_issue.yml  support_question.yml
.github/workflows/: ci.yml  dependency-updates.yml  feature-branch-automation.yml  market-aware-deployment.yml  performance-monitoring.yml  release-automation.yml  security-enhanced.yml
@/development-logs/: security-incident-api-key-exposure.md  security-incident-hardcoded-credentials.md
apps/web/: README.md  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.vue  (+1 more)
config/: .env.example  tsconfig.json  tsconfig.main.json  vite.config.ts
deployment/: README.md
deployment/compose/: docker-compose.dev.yml  docker-compose.prod.yml  env.example
deployment/containers/: Containerfile.datahub  Containerfile.kairos  Containerfile.redis
deployment/k8s/: 00-namespace.yaml  01-configmap.yaml  02-deployment.yaml  03-service.yaml  04-ingress.yaml  05-secrets-template.yaml  README.md  deploy.sh
deployment/podman/: traderterminal-pod.yaml
deployment/scripts/: dev-compose.sh  generate-dev-env.sh  install-fedora.sh  install-macos.sh  tradenote-setup.sh
docs/: CLAUDE_DEVELOPMENT_LOG.md  COMPONENT_DOCUMENTATION.md  DEVELOPMENT_STANDARDS.md  IMPLEMENTATION_SUMMARY.md  PAPER_TRADING_GUIDE.md  README.md  STEP_0_4_TOPSTEPX_COMPLETION_SUMMARY.md  TRADINGVIEW_STRATEGY_EXAMPLES.md  TRADINGVIEW_WEBHOOK_SETUP.md  USER_GUIDE.md
docs/api/: BACKTESTING_API.md  PAPER_TRADING_API.md  README.md  TRADENOTE_API.md
docs/architecture/: API_ACCESS_GUIDE.md  CRITICAL_PATH_APIS.md  PLAYWRIGHT_GUI_TESTING_FRAMEWORK.md  SYSTEM_ARCHITECTURE.md
docs/developer/: DEVELOPMENT_LOGGING.md  DEVELOPMENT_LOGGING_AUTOMATION.md  DEVELOPMENT_WORKFLOW.md  IMPROVEMENT_REPORT.md  PROJECT_STRUCTURE.md  UV_INSTALLATION_OPTIMIZATION.md  UV_MIGRATION_GUIDE.md  VALIDATION_REPORT.md
docs/development-logs/: 2025-01-20-claude-config-alignment.md  20250120_154500_main_784b10d8_development_logging_automation_improvements.json  20250120_154500_main_784b10d8_development_logging_automation_improvements.md  20250120_190000_main_29f28e7_comprehensive_e2e_test_suite_broker_sandbox_completion.json  20250120_190000_main_29f28e7_comprehensive_e2e_test_suite_broker_sandbox_completion.md  20250120_234500_main_prp_critical_path_implementation.json  20250120_234500_main_prp_critical_path_implementation.md  20250120_multi_broker_integration_completion.json  20250120_multi_broker_integration_completion.md  20250120_webserver_first_frontend_refactor_phase_minus_one.md  20250719_191930_main_13d7c45_github_workflows_implementation.json  20250719_191930_main_13d7c45_github_workflows_implementation.md  20250719_202610_main_476be28_trading_dashboard_core_implementation.json  20250719_202610_main_476be28_trading_dashboard_core_implementation.md  20250719_224645_main_281369b_trader_dashboard_complete_implementation.json  20250719_224645_main_281369b_trader_dashboard_complete_implementation.md  20250720_012459_main_5576f5f_critical_path_futures_trading_implementation.json  20250720_012459_main_5576f5f_critical_path_futures_trading_implementation.md  20250720_043000_main_bc0d26b_tradovate_test_suite_symbol_mapping_completion.json  20250720_043000_main_bc0d26b_tradovate_test_suite_symbol_mapping_completion.md  20250720_103000_main_fb63caa_readme_user_focus_refactor.json  20250720_103000_main_fb63caa_readme_user_focus_refactor.md  20250720_103028_main_d31f6b2_paper_trading_system_implementation.json  20250720_103028_main_d31f6b2_paper_trading_system_implementation.md  20250720_112247_main_5de5590_tradenote_integration_complete.md  20250720_174500_main_9641809_unified_trading_platform_prp_implementation.json  20250720_174500_main_9641809_unified_trading_platform_prp_implementation.md  20250720_234500_main_1274bbd_containerization_implementation_complete.json  20250720_234500_main_1274bbd_containerization_implementation_complete.md  CLAUDE_DEVELOPMENT_LOG.md  README.md  index.json  index.md
docs/security/: GITHUB_SECURITY_SETUP.md  SECURE_CREDENTIALS.md
docs/user/: INSTALLATION_GUIDE.md  TRADENOTE_SETUP_GUIDE.md  TRADINGVIEW_INTEGRATION.md
scripts/: check-compatibility.py  ci-health-check.py  fix-ci-issues.sh  manage_credentials.py  manual_webhook_test.py  quick-start.sh  run-playwright-tests.sh  setup-api-keys.sh  setup-dev-environment.sh  setup_secure_credentials.sh  setup_uv.sh  start_dev.sh  test_paper_trading.py  test_phase_0_validation.py  test_topstepx_integration.py  test_tradovate_integration.py  test_webhook.sh  test_webhook_integration.sh  test_webhook_security.py  validate_phase_0_structure.py
scripts/dev-logging/: convert_old_logs.py  log-prompt.py  manage-logs.py  setup-hooks.sh
src/frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
tests/e2e/: test_frontend_backend_integration.py  test_paper_trading_integration.py  test_tradenote_realtime_integration.py  test_webhook_tradovate_flow.py
tests/feeds/: test_tastytrade_integration.py
tests/integration/: __init__.py  test_multi_broker_integration.py  test_phase_0_end_to_end.py  test_tradovate_integration.py
tests/playwright/: README.md  global-setup.ts  global-teardown.ts
tests/unit/: conftest.py  test_symbol_mapping.py  test_tradovate_auth.py  test_tradovate_manager.py  test_tradovate_market_data.py  test_tradovate_orders.py
(+134 files in other folders)
